--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,12 +12,10 @@ bus_width_u16 = []
 bus_width_u32 = []
 bus_width_u64 = []
 
-[patch.crates-io]
-unique-type-id = { git = "https://github.com/IamTheCarl/unique-type-id.git" }
-
 [dependencies]
 hashbrown = "0.14.2"
 casey = "0.4.0"
 fortuples = "0.9.1"
-unique-type-id = "1.2.0"
-unique-type-id-derive = "1.2.0"
+unique-type-id = "1.3.0"
+unique-type-id-derive = "1.3.0"
+uninit = { version = "0.6.2", default-features = false }
