--- a/rust-toolchain.toml
+++ b/rust-toolchain.toml
@@ -1,3 +1,3 @@
 [toolchain]
 channel = "nightly"
-components = ["rust-src", "clippy", "rustfmt", "rust-analyzer"]
+components = ["rust-src", "clippy", "rustfmt", "rust-analyzer", "miri"]
