--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,5 @@ fortuples = "0.9.1"
 unique-type-id = "1.3.0"
 unique-type-id-derive = "1.3.0"
 uninit = { version = "0.6.2", default-features = false }
+thiserror = { version = "1.0", package = "thiserror-core", default-features = false }
+itertools = { version = "0.12.0", default-features = false }
